F&GDEV/src/objects/Marketing_to_Product_State_Association__c.object
<CustomObject>
    <fields>
        <fullName>Form_Description__c</fullName>
        <formula>Marketing_Materials__r.Form_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Materials__c</fullName>
        <label>Marketing Materials</label>
        <referenceTo>Marketing_Materials__c</referenceTo>
        <relationshipName>Marketing_to_Product_State_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marketing_Production_Date__c</fullName>
        <formula>Marketing_Materials__r.Marketing_Production_Date__c</formula>
        <label>Marketing Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Specs__c</fullName>
        <label>Product Specs</label>
        <referenceTo>Product_Specification__c</referenceTo>
        <relationshipLabel>Marketing Materials</relationshipLabel>
        <relationshipName>Marketing_to_Product_Association</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Product_Specs__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <label>Marketing to Product Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPS-{0000}</displayFormat>
        <label>Marketing to Product State Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing to Product Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>